--- a/index.html
+++ b/index.html
@@ -35,14 +35,14 @@
             <h3>活動</h3>
             <ul class="list-group">
                 <li class="list-group-item">1. 學生天地 當值表 :</li>
-                <li class="list-group-item">   12:45-2:15      </li>
+                <li class="list-group-item">  時間: 12:45-2:15     </li>
                                               <lj>逢星期一 Chowsy  </lj>
                                               <la>逢星期二 Simon   </la>
                                               <lb>逢星期三 Ivy     </lb>
                                               <lc>逢星期四 May     </lc>
                                               <ld>逢星期五 Sally   </ld>
                 <li class="list-group-item">2. 共享空間 當值表 :</li>
-                <li class="list-group-item">2:10-4:30</li>
+                <li class="list-group-item">時間 2:10-4:30</li>
                 <lj>14/10       Mon 小琴   </lj>
                 <la>15/10       Tue Peg    </la>
                 <lb>16/10       Wed Ivy    </lb>
